Added a profile img and certificates drom Credly

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Alan Bitts</title>
+    <title>Alan Bitts - web developer</title>
 </head>
 <body>
 
@@ -11,8 +11,13 @@
         <a href="#about-me">About me</a>
         <a href="#skills">Skills</a>
         <a href="#education">Education</a>
-        <a href="#projects">Projects</a>
+        <a href="#certificates">Certificates</a>
     </nav>
+
+    <div>
+    <img class="profile-img" src="images/alanbitts.jpg" alt="developer">
+    </div>
+        
 
     <section id="about-me">
         <h1>About me</h1>
@@ -69,8 +74,12 @@
     </section>
     <hr>
 
-    <section id="projects">
-        <h2>Projects</h2>
+    <section id="certificates">
+        <h2>Certificates</h2>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="7d2e86e8-b441-498a-8d6d-ed1b11f822a1" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="60c77ab2-5545-4e10-8ac7-7741364d2d1e" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="f0208393-3d31-4360-8452-a216efbc15ea" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="ce889fe1-80c1-485b-84de-bf0ee26e4f89" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
     </section>
     <hr>
 
