modified the aboutme section

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <section id="about-me">
         <h1>About me</h1>
-        <p>Hi, I'm Alan<br>
-        I'm a IT technician and aspiring full stack developer with experience in front-end design and coding of
-        interative elements. I can take care of the entire process of bulding a website and deploy it on the 
-        internet.
+        <p>Hi, I'm Rui Viveiros but you can call me Alan.<br>
+        I'm an IT technician, former communication assistant and aspiring full stack developer.<br>
+        I was born in 92 in Island of Madeira and my native language is portuguese but I do speak english very well<br>
+        I'm interested in many things but manly: coding/programming, music, movies and books. <br>
         </p>
     </section>
 
@@ -62,7 +62,7 @@
 
     <section id="education">
         <h2>Formal Education</h2>
-        <h4>Undergraduate degree in Comunnication, Culture and Organizations (2015)</h4>
+        <h4>Undergraduate degree in Communication, Culture and Organizations (2015)</h4>
         <ul>
             <li>Hability to carry out duties in advisory services in fields such as management, 
                 culture, communication and administration</li>
@@ -84,7 +84,7 @@
     <hr>
 
     <FOOter>
-        © Rui Viveiros. All Rights Reserved.
+        <a href="mailto:rui-viveiros@hotmail.com">© Rui Viveiros</a>. All Rights Reserved.
     </FOOter>
 </body>
 </html>
