--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     </section>
     <hr>
 
-    <FOOter>
-        <a href="mailto:rui-viveiros@hotmail.com">© Rui Viveiros</a>. All Rights Reserved.
-    </FOOter>
+    <footer>
+        <a href="mailto:rui-viveiros@hotmail.com" subject="from github portefolio">© Rui Viveiros</a>. All Rights Reserved.
+    </footer>
 </body>
 </html>
