--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <!-- home banner -->
     <div>
-    <img class="home-banner" width="80%" src="/images/162908202.jpg" alt="developer">
+    <img class="home-banner" src="images/162908202.jpg" alt="developer">
     </div>
 
     <section id="about-me">
