--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <!-- Navbar Logo -->
           <div class="logo">
             <!-- Logo Placeholder for Illustration -->
-            <a href="#"><img width=80% src="images/logo.png"></a>
+            <a href="#"><img width="80%" src="images/logo.png"></a>
           </div>
       
           <!-- Navbar Links -->
