--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <script src="script.js"></script>
-    <title>Alan Bitts - web developer</title>
+    <title>Rui Viveiros - web developer</title>
 </head>
 <body>
 
@@ -51,10 +51,10 @@
 
     <section id="about-me">
         <h1>About me</h1>
-        <p>Hi, I'm Rui Viveiros but you can call me Alan.<br>
+        <p>Hi, I'm Rui Viveiros.<br>
         I'm an IT technician, former communication assistant and aspiring full stack developer.<br>
-        I was born in 92 in Island of Madeira and my native language is portuguese but I do speak english very well.<br>
-        I'm interested in many things but manly: coding/programming, music, movies and books.
+        I was born in 92 in Island of Madeira.<br>
+        I'm interested in coding/programming, music, movies and books.
         </p>
     </section>
 
