--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section id="about-me">
         <h1>About me</h1>
-        <p>Hi, I'm Rui Viveiros.<br>
+        <p>Hi, I'm Rui Viveiros. Im with andre rn<br>
         I'm an IT technician, former communication assistant and aspiring full stack developer.<br>
         I was born in 92 in Island of Madeira.<br>
         I'm interested in coding/programming, music, movies and books.
