--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section id="about-me">
         <h1>About me</h1>
-        <p>Hi, I'm Rui Viveiros. Im with andre rn<br>
+        <p>Hi, I'm Rui Viveiros.<br>
         I'm an IT technician, former communication assistant and aspiring full stack developer.<br>
         I was born in 92 in Island of Madeira.<br>
         I'm interested in coding/programming, music, movies and books.
@@ -61,6 +61,7 @@
     
     <section id="skills">
         <h2>Skills</h2>
+        <p>Using Python libraries such as Pandas & Numpy, and developing code using Jupyter Notebooks. Access and web scrape data using Beautiful Soup.</p>
         <p>Develop interactive user interfaces (UIs) and web applications using React, JSX, and ES6.</p>
         <p>Build dynamic websites and front-end applications quickly and easily with reusable React components.</p>
         <p>Create GitHub repositories and branches, and perform pull requests (PRs) and merge operations, to collaborate on a team project.</p>
@@ -89,11 +90,12 @@
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="60c77ab2-5545-4e10-8ac7-7741364d2d1e" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="f0208393-3d31-4360-8452-a216efbc15ea" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="ce889fe1-80c1-485b-84de-bf0ee26e4f89" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="92fd7fa8-ba2c-41a8-be9d-cc8afbc3dfe2" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
     </section>
     <hr>
 
     <footer>
-        <a href="mailto:rui-viveiros@hotmail.com" subject="from github portefolio">© Rui Viveiros</a>. All Rights Reserved.
+        <a href="mailto:rui-viveiros@hotmail.com" subject="from github portefolio">© 2024 Rui Viveiros</a>. All Rights Reserved.
     </footer>
 </body>
 </html>
