--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
     <section id="certificates">
         <h2>Certificates</h2>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="b5598cdf-6375-46a5-b224-70c6258f0c49" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="7d2e86e8-b441-498a-8d6d-ed1b11f822a1" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="60c77ab2-5545-4e10-8ac7-7741364d2d1e" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="f0208393-3d31-4360-8452-a216efbc15ea" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
