--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
   <div class="container">
     <div class="col-md-0 px-500">
-        <img src="https://alanbitts.github.io/images/162908202.jpg" class="img-fluid">
+        <img src="https://raw.githubusercontent.com/AlanBitts/AlanBitts.github.io/main/assets/162908202.jpg" class="img-fluid">
     </div>
 </div>
 
