--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </symbol>
     </svg>
 
-    <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
+<!--      <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
       <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center"
               id="bd-theme"
               type="button"
@@ -149,7 +149,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </div> -->
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
@@ -165,7 +165,7 @@
 
   <div class="container">
     <div class="col-md-0 px-500">
-        <img src="https://raw.githubusercontent.com/AlanBitts/AlanBitts.github.io/main/assets/162908202.jpg" class="img-fluid">
+        <img src="assets/162908202.jpg" class="img-fluid">
     </div>
 </div>
 
