--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
   <footer class="mt-auto text-white-50">
     <p>©️ 2024 RUI VIVEIROS | <a href="https://www.linkedin.com/in/alanbitts/" class="text-white">LinkedIn</a> <a href="https://github.com/AlanBitts" class="text-white">Github</a></p>
-  <a rel="me" href="https://defcon.social/@alanbitts">Mastodon</a>
+ <a rel="me" href="https://mastodon.social/@alanbitts" class="text-white">Mastodon</a>
   </footer>
 </div>
 <!-- Fixed Navbar -->
