--- a/index.html
+++ b/index.html
@@ -212,8 +212,7 @@
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>©️ 2024 RUI VIVEIROS | <a href="https://www.linkedin.com/in/alanbitts/" class="text-white">LinkedIn</a> <a href="https://github.com/AlanBitts" class="text-white">Github</a></p>
- <a rel="me" href="https://mastodon.social/@alanbitts" class="text-white">Mastodon</a>
+    <p>©️ 2024 RUI VIVEIROS | <a href="https://www.linkedin.com/in/alanbitts/" class="text-white">LinkedIn</a><a href="https://github.com/AlanBitts" class="text-white">Github</a><a rel="me" href="https://mastodon.social/@alanbitts" class="text-white">Mastodon</a></p>
   </footer>
 </div>
 <!-- Fixed Navbar -->
