--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
 
   <main class="px-3">
     <h1 id="aboutme">About me</h1>
-    <p class="lead">Hi, I'm Rui Viveiros<br>full-stack developer based in Madeira island<br><hr></p>
+    <p class="lead">Hi, I'm Rui Viveiros<br>Thanks for stopping by…<br>
+This is what I consider my “anchor site” on the Web. Think of it as a portal to (almost) everything I’m doing, online and offline.<br><hr></p>
     <p>A full-stack developer is an engineer who has the expertise to build both the front end and the back end of a website. 
       The front end encompasses the visible parts of a website that users interact with, while the back end handles behind-the-scenes tasks such as data storage and processing.</p>
   </main>
