--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ This is what I consider my “anchor site” on the Web. Think of it as a portal
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>©️ 2024 RUI VIVEIROS | <a href="https://www.linkedin.com/in/alanbitts/" class="text-white">LinkedIn</a> <a href="https://github.com/AlanBitts" class="text-white">Github</a> <a rel="me" href="https://mastodon.social/@alanbitts" class="text-white">Mastodon</a></p>
+    <p>©️ 2024 RUI VIVEIROS | <a href="https://www.linkedin.com/in/alanbitts/" class="text-white">LinkedIn</a> <a href="https://github.com/AlanBitts" class="text-white">Github</a> <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'H2H310HCT0');kofiwidget2.draw();</script> </p>
   </footer>
 </div>
 <!-- Fixed Navbar -->
