appended Ko-fi floating widget

--- a/index.html
+++ b/index.html
@@ -244,7 +244,16 @@ This is what I consider my “anchor site” on the Web. Think of it as a portal
 </div>
 </div>
 </nav>
-
+<!--Ko-fi floating widget  -->
+    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('alanbitts', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support Me',
+    'floating-chat.donateButton.background-color': '#00b9fe',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
 
 
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
