--- a/index.html
+++ b/index.html
@@ -211,9 +211,11 @@ This is what I consider my “anchor site” on the Web. Think of it as a portal
     <p class="lead">
       <a href="https://www.credly.com/users/rui-viveiros/badges" class="btn btn-lg btn-light fw-bold border-white bg-white">View</a>
   </main>
-
+<!-- Ko-fi widget -->
+<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'H2H310HCT0');kofiwidget2.draw();</script> 
+  
   <footer class="mt-auto text-white-50">
-    <p>©️ 2024 RUI VIVEIROS | <a href="https://www.linkedin.com/in/alanbitts/" class="text-white">LinkedIn</a> <a href="https://github.com/AlanBitts" class="text-white">Github</a> <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'H2H310HCT0');kofiwidget2.draw();</script> </p>
+    <p>©️ 2024 RUI VIVEIROS | <a href="https://www.linkedin.com/in/alanbitts/" class="text-white">LinkedIn</a> <a href="https://github.com/AlanBitts" class="text-white">Github</a></p>
   </footer>
 </div>
 <!-- Fixed Navbar -->
@@ -244,17 +246,6 @@ This is what I consider my “anchor site” on the Web. Think of it as a portal
 </div>
 </div>
 </nav>
-<!--Ko-fi floating widget  -->
-    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-<script>
-  kofiWidgetOverlay.draw('alanbitts', {
-    'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Support Me',
-    'floating-chat.donateButton.background-color': '#00b9fe',
-    'floating-chat.donateButton.text-color': '#fff'
-  });
-</script>
-
 
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
