--- a/index.html
+++ b/index.html
@@ -196,15 +196,19 @@ This is my “anchor site” on the Web. Think of it as a portal to everything I
     <li class="nav-item">
       <a class="nav-link" href="#aboutme">About me</a>
     </li>
+<!--     TODO: build new page only for skills -->
     <li class="nav-item">
       <a class="nav-link" href="#skills">Skills</a>
     </li>
+<!--     todo -->
     <li class="nav-item">
-      <a class="nav-link" href="#education">Education</a>
+      <a class="nav-link" href="#education">Links</a>
     </li>
+<!--     to do -->
     <li class="nav-item">
       <a class="nav-link" href="#badges">Projects</a>
     </li>
+<!--     to improve -->
     <li class="nav-item">
       <a class="nav-link" href="https://alanbitts-gallery.netlify.app/">Gallery</a>
     </li>
